# hello-lib-demo

./: CMakeLists.txt  README.md
lib/: libhello.so.1.2
src/: CMakeLists.txt  hello.c
test/: CMakeLists.txt  main.c
